--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
-    "mkdir": "^0.0.2",
+    "mkdirp": "^3.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pluralize": "^8.0.0",
     "sqlite3": "^5.1.6"
   }
